# longtal-cifar100-project

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements-torch.txt  requirements.txt
configs/: balanced_softmax_resnet32_ir100.yaml  ce_resnet32_ir100.yaml  class_balanced_focal_resnet32_ir100.yaml  exp_ir100.yaml  ldam_drw_resnet32_ir100.yaml  ldam_drw_resnet32_ir100_diag.yaml  ldam_drw_resnet32_ir100_s0_5_short.yaml  ldam_drw_resnet32_ir100_s1.yaml  ldam_drw_resnet32_ir100_s10_short.yaml  ldam_drw_resnet32_ir100_s1_short.yaml  ldam_drw_resnet32_ir100_s2_short.yaml  ldam_drw_resnet32_ir100_s30_short.yaml  ldam_drw_resnet32_ir100_s5_short.yaml  logit_adjusted_resnet32_ir100.yaml  smoke_synthetic_ir100.yaml
docs/: final_delivery_checklist.md  ppt_content_and_speaker_notes.md  project_blueprint.md
presentation/: create_deck.js  鍥惧儚闀垮熬鍒嗙被瀹為獙姹囨姤.pptx
report/: report.md  机器学习课程作业_图像长尾分类实验报告.docx  鏈哄櫒瀛︿範璇剧▼浣滀笟_鍥惧儚闀垮熬鍒嗙被瀹為獙鎶ュ憡.docx  项目内容与完成情况总结.md
results/: summary.csv  summary.md
results/balanced_softmax_resnet32_ir100/: best.pt  history.csv  metrics.json  per_class_balanced_test.csv  per_class_imbalanced_test.csv  per_class_train.csv
results/ce_resnet32_ir100/: best.pt  history.csv  metrics.json  per_class_balanced_test.csv  per_class_imbalanced_test.csv  (+1 more)
scripts/: aggregate_results.py  build_report_docx.py  plot_dataset_distribution.py  plot_diagnostics.py  refresh_nn_metrics.py  run_full_experiments.ps1  run_full_experiments.sh  run_remote_extra_experiments.sh  run_smoke_pipeline.ps1  run_smoke_pipeline.sh
tests/: test_smoke_pipeline.py
(+88 files in other folders)
